--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,21 @@
 .open-sans {
-  font-family: "Open Sans", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: weight;
-  font-style: normal;
+font-family: "Open Sans", sans-serif;
+font-optical-sizing: auto;
+font-weight: weight;
+font-style: normal;
 }
 
 body{
     background-image: url("img/faded-office.png");
     background-size: cover;
     background-repeat: no-repeat;
-    font-family: Open Sans;
+}
+
+.hero{
+    font-family: "Open Sans";
     font-size: 24px;
-    font-weight: regular;
-    padding: 20px 400px 0 40px;
+    padding: 25% 0 25% 5%;
+    width: 50%;
 }
 
 h1{
@@ -24,7 +27,7 @@ button{
     background-color: #0ea5e9;
     border: none;
     padding: 18px 30px;
-    font-family: Open Sans;
+    font-family: "Open Sans";
     font-size: 22px;
     font-weight: bold;
     color: #FFFFFF;
